# rusty-ai-sdk

./: README.md
tauri-plugin-rusty-ai-sdk/: Cargo.toml  README.md  llm_context_async_openai.md  package.json  pnpm-lock.yaml  process_rustdoc.py  universal_process_rustdoc.py
tauri-plugin-rusty-ai-sdk/examples/tauri-app/: package.json
tauri-plugin-rusty-ai-sdk/examples/tauri-app/src/: App.svelte
tauri-plugin-rusty-ai-sdk/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-rusty-ai-sdk/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-rusty-ai-sdk/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-rusty-ai-sdk/guest-js/: index.ts
tauri-plugin-rusty-ai-sdk/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
