[package]
name = "tauri-plugin-rusty-ai-sdk"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-rusty-ai-sdk"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
async-openai = "0.28.3"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
